make-a-wish-salesforce/src/objects/cg__Preview__c.object
<CustomObject>
    <fields>
        <fullName>cg__Error_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Error Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cg__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__File_Key__c</fullName>
        <label>File Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__File_Object_Id__c</fullName>
        <label>File Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__File_Object_Type__c</fullName>
        <label>File Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cg__File_Url__c</fullName>
        <label>File Url</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__Preview_Key__c</fullName>
        <label>Preview Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Preview_Name__c</fullName>
        <label>Preview Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Preview_State__c</fullName>
        <label>Preview State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__S3_Signature__c</fullName>
        <label>S3 Signature</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__Thumbnail_Key__c</fullName>
        <label>Thumbnail Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Thumbnail_Name__c</fullName>
        <label>Thumbnail Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Thumbnail_State__c</fullName>
        <label>Thumbnail State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Preview</label>
    <listViews>
        <fullName>cg__All</fullName>
        <columns>NAME</columns>
        <columns>cg__File_Name__c</columns>
        <columns>cg__File_Key__c</columns>
        <columns>cg__Thumbnail_Key__c</columns>
        <columns>cg__Thumbnail_State__c</columns>
        <columns>cg__Preview_Key__c</columns>
        <columns>cg__Preview_State__c</columns>
        <columns>cg__Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>cg__File_Object_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cg__Last_Modified_First</fullName>
        <columns>NAME</columns>
        <columns>cg__File_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>cg__Preview_State__c</columns>
        <columns>cg__Thumbnail_State__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>4/18/2017 12:00 AM</value>
        </filters>
        <label>Last Modified First</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Preview Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Previews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>